--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -4,7 +4,7 @@
 
 {% block page_header %}
 {% if user.is_authenticated %}
-<div class="p-3 mb-4 bg-light border rounded-3">
+<div class="p-3 mb-4 bg-dark border rounded-3">
   <div class="container-fluid py-4">
     <h1 class="display-3">Household</h1>
 
@@ -23,8 +23,8 @@
           </div>
 
           <div class="mt-2">
-            <span class="badge bg-warning text-dark p-2">
-              ✨ XP Needed: {{ xp_to_next|intcomma }}
+            <span class="badge=info text-light p-2">
+              ✨ XP Needed to next level: {{ xp_to_next|intcomma }}
             </span>
           </div>
         </div>
