--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -26,21 +26,23 @@
 <nav class="navbar navbar-expand-md navbar-light bg-dark mb-4 border">
   <div class="container-fluid">
     {% if user.is_authenticated %}
-          <li class="nav-item d-flex align-items-center me-3">
-            <div class="text-end me-2">
-              <div><strong>{{ user.username }}</strong></div>
-              <div class="small">
-                Lv {{ user_level }} ({{ progress_percent|floatformat:0 }}%)
-              </div>
-              <div class="progress" style="height: 5px; width: 100px;">
-                <div class="progress-bar bg-success" role="progressbar"
-                     style="width: {{ progress_percent }}%;"
-                     aria-valuenow="{{ progress_percent }}" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
+    <a class="nav-item me-3">
+        <a href="{% url 'accounts:user_profile' username=user.username %}" class="btn btn-outline-light d-flex align-items-center">
+        <div class="text-end me-2">
+            <div><strong>{{ user.username }}</strong></div>
+            <div class="small">
+            Lvl: {{ user_level }} ({{ progress_percent|floatformat:0 }}%)
             </div>
-          </li>
-  {% endif %}
+            <div class="progress" style="height: 5px; width: 100px;">
+            <div class="progress-bar bg-success" role="progressbar"
+               style="width: {{ progress_percent }}%;"
+               aria-valuenow="{{ progress_percent }}" aria-valuemin="0" aria-valuemax="100">
+          </div>
+        </div>
+      </div>
+    </a>
+    {% endif %}
+
     <a class="navbar-brand" href="{% url 'household_main:index' %}">Home</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,9 +70,6 @@
       <ul class="navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item">
           {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'accounts:user_profile' username=request.user.username %}">
-              View My Profile
-            </a>
           </li>
           <li class="nav-item">
             <form action="{% url 'accounts:logout' %}" method="post" class="d-inline">
